--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
+    <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link th:href="@{/css/layout1.css}" rel="stylesheet">
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -14,14 +16,17 @@
 
     <th:block layout:fragment="script"></th:block>
     <th:block layout:fragment="css"></th:block>
+
 </head>
 <body>
-    <div th:replace="fragments/header::header"></div>
 
-    <div layout:fragment="content">
+<div th:replace="fragments/header::header"></div>
 
-    </div>
+<div layout:fragment="content" class="content">
 
-    <div th:replace="fragments/footer::footer"></div>
+</div>
+
+<div th:replace="fragments/footer::footer"></div>
+
 </body>
 </html>
