--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -4,5 +4,6 @@
       layout:decorate="~{layouts/layout1}">
 
 <div layout:fragment="content">
-    <h1>메인 페이지입니다.</h1>
+    <h1>상품등록 페이지입니다.</h1>
 </div>
+</html>
